--- a/index.html
+++ b/index.html
@@ -17,27 +17,46 @@
 </head>
 <body>
 	<header>
-	<img src="images/logo.png" alt="logo">
-    <div><h1>Water cycle</h1>
-        <h2>four stages</h2></div>
+	<img src="images/Screenshot (196).png" alt="logo">
+    <div><h1>Goiania chamber of commerce</h1>
+        <h2>Site Slogan</h2></div>
+        <nav class="date">&copy; 201x &bull; Paul Cheney &bull; 123-555-6789</nav>
     </header>
-
     <nav>
         <ul >
-            <li class="active"><a href="index.html">Evaporation</a></li>
-            <li ><a href="condensation.html">condensation</a></li>
-            <li><a href="precipitation.html">precipitation</a></li>
-            <li><a href="collection.html">Collection</a></li>    
+            <li><a href="index.html">Discover</a></li>
+            <li ><a href="condensation.html">Directory</a></li>
+            <li><a href="precipitation.html">Join</a></li>
+            <li><a href="collection.html">Contact</a></li>    
         </ul>
     </nav>
 
     <main>
-        <h1>Evaporation</h1>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus, eveniet iusto. Distinctio possimus beatae facilis, laborum tempora ipsum repellendus modi suscipit? Cupiditate veritatis quis debitis ipsam est corporis vero quia?</p>
+        <h1>Page title</h1>
+        <div class="grid-container">
+            <div class="item1">1</div>
+            <div class="item2">2</div>
+            <div class="item3">3</div>  
+            <div class="item4">4</div>
+            <div class="item5">5</div>
+            <div class="item6">6</div>
+            <div class="item7">7</div>
+          </div>
     </main>
  
     <footer>
-        &copy; 201x &bull; Paul Cheney &bull; 123-555-6789
+        <div><img src="images/Screenshot (196).png" alt="logo"></div>
+        <div><p>pobre</p>
+            <p>rico</p>
+            <p>classe media</p>
+        </div>
+        <div>
+            <ul>
+                <li><a href="">link</a></li>
+            <li><a href="">link</a></li>
+            <li><a href="">link</a></li>
+            </ul>
+        </div>
     </footer>
 
 </body>
