--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="description" content="Fill Me In">
 <meta name="author" content="Dayan Frazao">
-<title>Evaporation: Water cycle</title>
+<title>Goiania chamber of commerce</title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <link href="css/normalize.css" rel="stylesheet">
@@ -20,7 +20,7 @@
 	<img src="images/Screenshot (196).png" alt="logo">
     <div><h1>Goiania chamber of commerce</h1>
         <h2>Site Slogan</h2></div>
-        <nav class="date">&copy; 201x &bull; Paul Cheney &bull; 123-555-6789</nav>
+        <nav class="date"><span id="omed"></span></nav>
     </header>
     <nav>
         <ul >
@@ -51,12 +51,12 @@
             <p>classe media</p>
         </div>
         <div>
-            <ul>
-                <li><a href="">link</a></li>
-            <li><a href="">link</a></li>
-            <li><a href="">link</a></li>
-            </ul>
+                <p><a href="">link</a></p>
+            <p><a href="">link</a></p>
+            <p><a href="">link</a></p>
         </div>
+        <script src="js/id.js">
+        </script>
     </footer>
 
 </body>
