--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
  
     <footer>
         <div><img src="images/Screenshot (196).png" alt="logo"></div>
-        <div><p>pobre</p>
-            <p>rico</p>
-            <p>classe media</p>
+        <div><p>Goiania Chamber of Commerce</p>
+            <p>Address line 1</p>
+            <p>City, State Zip </p>
         </div>
         <div>
                 <p><a href="">link</a></p>
