--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<header>
 	<img src="images/Screenshot (196).png" alt="logo">
     <div><h1>Goiania chamber of commerce</h1>
-        <h2>Site Slogan</h2></div>
+        <h2>"If you know it, you know it, if you don't know it, you don't know it."</h2></div>
         <nav class="date"><span id="omed"></span></nav>
     </header>
     <nav>
@@ -35,7 +35,10 @@
         <h1>Page title</h1>
         <div class="grid-container">
             <div class="item1">1</div>
-            <div class="item2">2</div>
+            <div class="item2">
+                <section class="box"><p>Welcome to Goiania</p>
+                    <button>join the Chamber</button></section>
+            </div>
             <div class="item3">3</div>  
             <div class="item4">4</div>
             <div class="item5">5</div>
