--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 </head>
 <body>
 	<header>
-	<img src="images/Screenshot (196).png" alt="logo">
+	<img src="images/Screenshot(196).png" alt="logo">
     <div><h1>Goiania chamber of commerce</h1>
         <h2>"If you know it, you know it, if you don't know it, you don't know it."</h2></div>
-        <nav class="date"><span id="omed"></span></nav>
+        <nav class="date"><span id="omed"></span>,<span id="om"></span> <span id="o"></span>,<span id="year"></span></nav>
     </header>
     <nav>
         <ul >
@@ -32,28 +32,42 @@
     </nav>
 
     <main>
-        <h1>Page title</h1>
+        <h1>Discover</h1>
         <div class="grid-container">
-            <div class="item1">1</div>
+            <div class="item1"><section><h1>Events</h1>
+                <p>Join us in these weekend for these amazing soccer game</p>
+            <a href="">more_info</a></section></div>
             <div class="item2">
                 <section class="box"><p>Welcome to Goiania</p>
                     <button>join the Chamber</button></section>
             </div>
-            <div class="item3">3</div>  
-            <div class="item4">4</div>
-            <div class="item5">5</div>
-            <div class="item6">6</div>
-            <div class="item7">7</div>
+            <div class="item3"><section><h1>transportation</h1>
+            <p>email@quicktrasnportation.com</p>
+        <p>999-9999</p></section></div>  
+            <div class="item4"><section><h1>weather</h1>
+                <p>temperature: 100 celsius</p> 
+                    <p>sunny day windspeed:2.5km/h</p>
+            </section>
+            </div>
+            <div class="item5"><section>
+                <h1>fresh water</h1>
+                <p>get a fresh water from the river meia-ponte</p>
+                <p>contact@freshwater.com</p>
+                <p>999-9999</p>
+            </section></div>
+            <div class="item6"><section><p>became a member of goiania moutain Chamber</p>
+            <button>join us</button></section></div>
+            <div class="item7"><section><h1>New release</h1><p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facilis nisi possimus quidem odio quis aut totam accusantium pariatur! Fuga ex rem dignissimos placeat aliquid, fugiat sunt atque inventore fugit laborum!</p></section></div>
           </div>
     </main>
  
     <footer>
-        <div><img src="images/Screenshot (196).png" alt="logo"></div>
+        <div><img src="images/Screenshot(196).png" alt="logo"></div>
         <div><p>Goiania Chamber of Commerce</p>
             <p>Address line 1</p>
             <p>City, State Zip </p>
         </div>
-        <div>
+        <div class="links">
                 <p><a href="">link</a></p>
             <p><a href="">link</a></p>
             <p><a href="">link</a></p>
