--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 	<header>
-	<img src="images/Screenshot(196).png" alt="logo">
+	<img src="images/Screenshot(196).png" alt="logo" class="logo">
     <div><h1>Goiania chamber of commerce</h1>
         <h2>"If you know it, you know it, if you don't know it, you don't know it."</h2></div>
         <nav class="date"><span id="omed"></span>,<span id="om"></span> <span id="o"></span>,<span id="year"></span></nav>
@@ -32,6 +32,7 @@
     </nav>
 
     <main>
+        <img src="hero-img.png" alt="" class="hero-image">
         <h1>Discover</h1>
         <div class="grid-container">
             <div class="item1"><section><h1>Events</h1>
@@ -62,7 +63,7 @@
     </main>
  
     <footer>
-        <div><img src="images/Screenshot(196).png" alt="logo"></div>
+        <div><img src="images/Screenshot(196).png" alt="logo" class="logo"></div>
         <div><p>Goiania Chamber of Commerce</p>
             <p>Address line 1</p>
             <p>City, State Zip </p>
