--- a/index.html
+++ b/index.html
@@ -63,15 +63,15 @@
     </main>
  
     <footer>
-        <div><img src="images/Screenshot(196).png" alt="logo" class="logo"></div>
+        <div class="p"><img src="images/Screenshot(196).png" alt="logo" class="logo"></div>
         <div><p>Goiania Chamber of Commerce</p>
             <p>Address line 1</p>
             <p>City, State Zip </p>
         </div>
         <div class="links">
-                <p><a href="">link</a></p>
-            <p><a href="">link</a></p>
-            <p><a href="">link</a></p>
+                <p><a href="index.html">info@goianiachamber.org</a></p>
+            <p><a href="index.html">+1(999)999-9999</a></p>
+            <p><a href="https://www.google.com/maps/place/Goi%C3%A2nia,+GO,+Brasil/@-16.6954999,-49.4443564,11z/data=!3m1!4b1!4m5!3m4!1s0x935ef6bd58d80867:0xef692bad20d2678e!8m2!3d-16.6868912!4d-49.2647943">link to map</a></p>
         </div>
         <script src="js/id.js">
         </script>
