--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
         <nav class="date"><span id="omed"></span>,<span id="om"></span> <span id="o"></span>,<span id="year"></span></nav>
     </header>
     <nav>
-        <ul >
+        <button id="ham">&#9776;</button>
+        <ul id="pn">
             <li><a href="index.html">Discover</a></li>
             <li ><a href="condensation.html">Directory</a></li>
             <li><a href="precipitation.html">Join</a></li>
