--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <main>
         <img src="hero-img.png" alt="" class="hero-image">
         <h1>Discover</h1>
+        <div id="message">attention!!!(Only today) new offers with 10% of discount</div>
         <div class="grid-container">
             <div class="item1"><section><h1>Events</h1>
                 <p>Join us in these weekend for these amazing soccer game</p>
@@ -44,15 +45,18 @@
                     <button>join the Chamber</button></section>
             </div>
             <div class="item3"><section><h1>transportation</h1>
+                <img src="box-truck.png" alt="truck-icon" class="icons">
             <p>email@quicktrasnportation.com</p>
         <p>999-9999</p></section></div>  
             <div class="item4"><section><h1>weather</h1>
+                <img src="cloudy-day.png" alt="weather-icon" class="icons">
                 <p>temperature: 100 celsius</p> 
                     <p>sunny day windspeed:2.5km/h</p>
             </section>
             </div>
             <div class="item5"><section>
                 <h1>fresh water</h1>
+                <img src="water-drop.png" alt="water-drop" class="icons">
                 <p>get a fresh water from the river meia-ponte</p>
                 <p>contact@freshwater.com</p>
                 <p>999-9999</p>
