--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <nav>
         <button id="ham">&#9776;</button>
         <ul id="pn">
-            <li><a href="index.html">Discover</a></li>
+            <li><a href="dicoverychannel.html">Discover</a></li>
             <li ><a href="condensation.html">Directory</a></li>
             <li><a href="precipitation.html">Join</a></li>
             <li><a href="collection.html">Contact</a></li>    
