--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <nav>
         <button id="ham">&#9776;</button>
         <ul id="pn">
+            <li class="active"><a href="index.html">Home-page</a></li>
             <li><a href="dicoverychannel.html">Discover</a></li>
             <li ><a href="condensation.html">Directory</a></li>
             <li><a href="precipitation.html">Join</a></li>
@@ -34,7 +35,7 @@
 
     <main>
         <img src="hero-img.png" alt="" class="hero-image">
-        <h1>Discover</h1>
+        <h1>Home-page</h1>
         <div id="message">attention!!!(Only today) new offers with 10% of discount</div>
         <div class="grid-container">
             <div class="item1"><section><h1>Events</h1>
