--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<img src="images/logo.png" alt="logo" class="logo">
     <div><h1>Goiania chamber of commerce</h1>
         <h2>"If you know it, you know it, if you don't know it, you don't know it."</h2></div>
-        <nav class="date"><span id="omed"></span>,<span id="om"></span> <span id="o"></span>,<span id="year"></span></nav>
+        <nav class="date">  <span id="omed">  </span>, <span id="om">  </span> <span id="o">  </span>, <span id="year">  </span></nav>
     </header>
     <nav>
         <button id="ham">&#9776;</button>
@@ -35,6 +35,9 @@
 
     <main>
         <figure class="myphoto">
+            <source media="(max-width: 400px)" srcset="hero-img.png">
+            <source media="(max-width: 1000px)" srcset="hero-img.png">
+            <source media="(max-width: 1600px)" srcset="hero-img.png">
             <img src="hero-img.png" alt="" class="im">
         </figure>
         <h1>Home-page</h1>
