--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
 
     <main>
         <figure class="myphoto">
-            <source media="(max-width: 400px)" srcset="hero-img.png">
-            <source media="(max-width: 1000px)" srcset="hero-img.png">
-            <source media="(max-width: 1600px)" srcset="hero-img.png">
-            <img src="hero-img.png" alt="" class="im">
+            <source media="(max-width: 400px)" srcset="200pxh.png">
+            <source media="(max-width: 1000px)" srcset="500pxh.png">
+            <source media="(max-width: 1600px)" srcset="800pxh.png">
+            <img src="900pxh.png" alt="" class="im">
         </figure>
         <h1>Home-page</h1>
         <div id="message">attention!!!(Only today) new offers with 10% of discount</div>
