--- a/join.html
+++ b/join.html
@@ -26,10 +26,10 @@
     <nav>
         <button id="ham">&#9776;</button>
         <ul id="pn">
-            <li class="active"><a href="index.html">Home-page</a></li>
+            <li><a href="index.html">Home-page</a></li>
             <li><a href="dicoverychannel.html">Discover</a></li>
             <li ><a href="condensation.html">Directory</a></li>
-            <li><a href="join.html">Join</a></li>
+            <li class="active"><a href="join.html">Join</a></li>
             <li><a href="collection.html">Contact</a></li>    
         </ul>
     </nav>
