--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
 
     <main>
         <figure class="myphoto">
-            <source media="(max-width: 900px)" srcset="900pxh.png">
-            <source media="(max-width: 800px)" srcset="800pxh.png">
-            <source media="(max-width: 500px)" srcset="500pxh.png">
-            <img src="200pxh.png" alt="" class="im">
+            <source media="(max-width: 900px)" srcset="900pxh-min.png">
+            <source media="(max-width: 800px)" srcset="800pxh-min.png">
+            <source media="(max-width: 500px)" srcset="500pxh-min.png">
+            <img src="200pxh-min.png" alt="" class="im">
         </figure>
         <h1>Home-page</h1>
         <div id="message">attention!!!(Only today) new offers with 10% of discount</div>
