--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
     </nav>
 
     <main>
-        <figure class="myphoto">
-            <source media="(max-width: 900px)" srcset="900pxh-min.png">
-            <source media="(max-width: 800px)" srcset="800pxh-min.png">
-            <source media="(max-width: 500px)" srcset="500pxh-min.png">
-            <img src="200pxh-min.png" alt="" class="im">
-        </figure>
+        <picture class="myphoto">
+            <source media="(min-width: 900px)" srcset="900pxh-min.jpg">
+            <source media="(min-width: 800px)" srcset="800pxh-min.jpg">
+            <source media="(min-width: 500px)" srcset="500pxh-min.jpg">
+            <img src="200pxh-min.jpg" alt="" class="im">
+        </picture>
         <h1>Home-page</h1>
         <div id="message">attention!!!(Only today) new offers with 10% of discount</div>
         <div class="grid-container">
