--- a/join.html
+++ b/join.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="description" content="Fill Me In">
 <meta name="author" content="Dayan Frazao">
-<title>Goiania chamber of commerce</title>
+<title>Goiania chamber of commerce's form</title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <link href="css/normalize.css" rel="stylesheet">
@@ -85,7 +85,7 @@
                     </label>
                     <label class="top">how many authors<input type="number" name="authors"></label>
                 </fieldset>
-                <input type="submit" value="propose my course" class="submitBtn">
+                <input type="submit" value="Apply Course" class="submitBtn">
             </form>
         </div>
     </main>
