--- a/directory.html
+++ b/directory.html
@@ -27,7 +27,7 @@
         <ul id="pn">
             <li class="active"><a href="index.html">Home-page</a></li>
             <li><a href="dicoverychannel.html">Discover</a></li>
-            <li ><a href="directory.html">Directory</a></li>
+            <li ><a href="condensation.html">Directory</a></li>
             <li><a href="join.html">Join</a></li>
             <li><a href="collection.html">Contact</a></li>    
         </ul>
