--- a/directory.html
+++ b/directory.html
@@ -25,60 +25,18 @@
     <nav>
         <button id="ham">&#9776;</button>
         <ul id="pn">
-            <li class="active"><a href="index.html">Home-page</a></li>
+            <li><a href="index.html">Home-page</a></li>
             <li><a href="dicoverychannel.html">Discover</a></li>
-            <li ><a href="condensation.html">Directory</a></li>
+            <li class="active"><a href="condensation.html">Directory</a></li>
             <li><a href="join.html">Join</a></li>
             <li><a href="collection.html">Contact</a></li>    
         </ul>
     </nav>
 
     <main>
-        <picture class="myphoto">
-            <source media="(min-width: 900px)" srcset="900pxh-min.jpg">
-            <source media="(min-width: 800px)" srcset="800pxh-min.jpg">
-            <source media="(min-width: 500px)" srcset="500pxh-min.jpg">
-            <img src="200pxh-min.jpg" alt="" class="im">
-        </picture>
-        <h1>Home-page</h1>
-        <div id="message">attention!!!(Only today) new offers with 10% of discount</div>
-        <div class="grid-container">
-            <div class="item1"><section><h1>Events</h1>
-                <p>Join us in these weekend for these amazing soccer game</p>
-            <a href="">more_info</a></section></div>
-            <div class="item2">
-                <section class="box"><p>Welcome to Goiania</p>
-                    <button>join the Chamber</button></section>
-            </div>
-            <div class="item3"><section><h1>transportation</h1>
-                <img src="box-truck.png" alt="truck-icon" class="icons">
-            <p>email@quicktrasnportation.com</p>
-        <p>999-9999</p></section></div>  
-            <div class="item4"><section><h1>weather</h1>
-                <img src="cloudy-day.png" alt="weather-icon" class="icons">
-                <p>Current Temperature is <span id="temp">34</span>&deg;</p> 
-                <p>Current Wind Speed is <span id="speed">60</span>mph</p> 
-                <p id="chill">message</p>
-            </section>
-            </div>
-            <div class="item5"><section>
-                <h1>fresh water</h1>
-                <img src="water-drop.png" alt="water-drop" class="icons">
-                <p>get a fresh water from the river meia-ponte</p>
-                <p>contact@freshwater.com</p>
-                <p>999-9999</p>
-            </section></div>
-            <div class="item6"><section><p>became a member of goiania moutain Chamber</p>
-            <button>join us</button></section></div>
-            <div class="item7"><section><h1>New release</h1><p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facilis nisi possimus quidem odio quis aut totam accusantium pariatur! Fuga ex rem dignissimos placeat aliquid, fugiat sunt atque inventore fugit laborum!</p></section></div>
-          </div>
-    </main>
- 
-    <footer>
-        <div class="p"><img src="images/logo.png" alt="logo" class="logo"></div>
-        <div><p>Goiania Chamber of Commerce</p>
-            <p>Address line 1</p>
-            <p>City, State Zip </p>
+        <button id="submit">m</button>
+        <button id="submit2">m</button>
+        <div id="cards">
         </div>
         <div class="links">
                 <p><a href="index.html">info@goianiachamber.org</a></p>
@@ -88,6 +46,8 @@
         <script src="js/id.js">
         </script>
         <script src="js/ws.js">
+        </script>
+        <script src="js/jst.js">
         </script>
     </footer>
 
