--- a/dicoverychannel.html
+++ b/dicoverychannel.html
@@ -24,7 +24,7 @@
     <nav>
         <button id="ham">&#9776;</button>
         <ul id="pn">
-            <li><a href="index.html">Discover</a></li>
+            <li class="active"><a href="index.html">Discover</a></li>
             <li ><a href="condensation.html">Directory</a></li>
             <li><a href="precipitation.html">Join</a></li>
             <li><a href="collection.html">Contact</a></li>    
@@ -32,28 +32,36 @@
     </nav>
 
     <main>
-        <div><h1>statiscs of goiania</h1>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit veritatis blanditiis dolores reiciendis nemo. Quod officiis iure quae maiores ducimus, sint similique optio incidunt maxime. Libero nihil possimus voluptatum reprehenderit?</p></div>
+        <div class="out_of_ideas">
+            <h1>statiscs of goiania</h1>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit veritatis blanditiis dolores reiciendis nemo. Quod officiis iure quae maiores ducimus, sint similique optio incidunt maxime. Libero nihil possimus voluptatum reprehenderit?</p>
+        </div>
     <div class="grid">
-        <section class="flex">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus illo voluptas ullam eius officiis ex veniam sed dolor quasi minus repellat atque magnam, sit unde asperiores ut rerum, amet nulla.</p>
-            <picture><img src="images/Screenshot(196).png" alt="" data-src="css/g-img.png" loading="lazy" class="images"></picture>
+        <div class="out_of_ideas2">
+            <span class="visits"></span>
+        </div>
+
+        <section class="flex1">
+            <p>Praca dos tres poderes</p>
+        <picture><img src="images/Screenshot(196).png" alt="" data-src="img_go/download-min.jpg" loading="lazy" class="images"></picture>
         </section>
-        <section class="flex">
-            <picture><img src="images/Screenshot(196).png" alt="" data-src="css/g-img.png" loading="lazy" class="images"></picture>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Porro aut, soluta eius in, odit corrupti officiis vel adipisci quas doloribus neque quidem animi voluptate illum a culpa doloremque saepe provident.</p>
+
+        <section class="flex2">
+            <picture><img src="images/Screenshot(196).png" alt="" data-src="img_go/lago_das_rosas.jpeg" loading="lazy" class="images"></picture>
+            <p>Lago Das Rosas</p>
         </section>
-        <section class="flex">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus facilis non impedit molestias quo dolorum repellat odit omnis voluptatibus minus, aperiam cupiditate accusantium, ut esse dolor ab laboriosam nam deserunt!</p>
-            <picture><img src="images/Screenshot(196).png" alt="" data-src="css/g-img.png" loading="lazy" class="images"></picture>
+
+        <section class="flex3">
+            <p>Memorial Do Cerrado</p>
+            <picture><img src="images/Screenshot(196).png" alt="" data-src="img_go/mem_cer.jpg" loading="lazy" class="images"></picture>
         </section>
-        <section class="flex">
-            <picture><img src="images/Screenshot(196).png" alt="" data-src="css/g-img.png" loading="lazy" class="images"></picture>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur earum minima provident praesentium, optio doloremque fugiat fuga deserunt ad cupiditate ratione quas recusandae nisi non voluptates, nobis modi veritatis voluptatibus.</p>
+        <section class="flex4">
+            <picture><img src="images/Screenshot(196).png" alt="" data-src="img_go/mercado_central.jpg" loading="lazy" class="images"></picture>
+            <p>Mercado Central</p>
         </section>
-        <section class="flex">
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus provident ex rem ratione accusantium inventore omnis obcaecati iusto accusamus a esse facilis amet numquam commodi modi, doloribus ut ea eum?</p>
-            <picture><img src="images/Screenshot(196).png" alt="" data-src="css/g-img.png" loading="lazy" class="images"></picture>
+        <section class="flex5">
+            <p>Tres Marcos</p>
+            <picture><img src="images/Screenshot(196).png" alt="" data-src="img_go/tres.jpg" loading="lazy" class="images"></picture>
         </section>
     </div>
     </main>
