--- a/directory.html
+++ b/directory.html
@@ -34,10 +34,11 @@
     </nav>
 
     <main>
-        <button id="submit">m</button>
-        <button id="submit2">m</button>
+        <button id="submit">m1</button>
+        <button id="submit2">m2</button>
         <div id="cards">
         </div>
+    <footer>
         <div class="links">
                 <p><a href="index.html">info@goianiachamber.org</a></p>
             <p><a href="index.html">+1(999)999-9999</a></p>
