--- a/dicoverychannel.html
+++ b/dicoverychannel.html
@@ -24,17 +24,18 @@
     <nav>
         <button id="ham">&#9776;</button>
         <ul id="pn">
-            <li class="active"><a href="index.html">Discover</a></li>
-            <li ><a href="condensation.html">Directory</a></li>
-            <li><a href="precipitation.html">Join</a></li>
+            <li ><a href="index.html">Home-Page</a></li>
+            <li class="active"><a href="dicoverychannel.html">Discover</a></li>
+            <li ><a href="directory.html">Directory</a></li>
+            <li><a href="join.html">Join</a></li>
             <li><a href="collection.html">Contact</a></li>    
         </ul>
     </nav>
 
     <main>
         <div class="out_of_ideas">
-            <h1>statiscs of goiania</h1>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sit veritatis blanditiis dolores reiciendis nemo. Quod officiis iure quae maiores ducimus, sint similique optio incidunt maxime. Libero nihil possimus voluptatum reprehenderit?</p>
+            <h1>Demoghrapic of goiania</h1>
+            <p>Goiania has a population of 1.5 million, in this population 48% considered are white, 45% are considered brown, 5% are considered black and 2% are considered asian.</p>
         </div>
         <div class="out_of_ideas2">
             <span class="visits"></span>
@@ -42,25 +43,41 @@
     <div class="grid">
 
         <section class="flex1">
-            <p>Praca dos tres poderes</p>
-        <picture><img src="images/Screenshot(196).png" alt="" data-src="img_go/download-min.jpg" loading="lazy" class="images"></picture>
+            <div class="decoration">
+                <p class="title">Praca dos tres poderes</p>
+            <p>It a pretty famous statue that simbolizes the three races that our demoghrapic is composed.</p>
+            </div>
+            <picture><img src="images/Screenshot(196).png" alt="" data-src="img_go/download-min.jpg" loading="lazy" class="images"></picture>
         </section>
 
         <section class="flex2">
             <picture><img src="images/Screenshot(196).png" alt="" data-src="img_go/lago_das_rosas.jpeg" loading="lazy" class="images"></picture>
-            <p>Lago Das Rosas</p>
+            <div class="decoration">
+                <p class="title">Lago Das Rosas</p>
+                <p>This a big natural park that people like to hang out with their families there</p>
+            </div>
+            
         </section>
 
         <section class="flex3">
-            <p>Memorial Do Cerrado</p>
+            <div class="decoration">
+                <p class="title">Memorial Do Cerrado</p>
+            <p>Its a memorial of the natural enviroment that is predominent in the city of goias</p>
+            </div>
             <picture><img src="images/Screenshot(196).png" alt="" data-src="img_go/mem_cer.jpg" loading="lazy" class="images"></picture>
         </section>
         <section class="flex4">
             <picture><img src="images/Screenshot(196).png" alt="" data-src="img_go/mercado_central.jpg" loading="lazy" class="images"></picture>
-            <p>Mercado Central</p>
+            <div class="decoration">
+                <p class="title">Mercado Central</p>
+                <p>Its a big famous market in the city, where people go to buy stuff for a cheap price</p> 
+            </div>
         </section>
         <section class="flex5">
-            <p>Tres Marcos</p>
+            <div class="decoration">
+                <p class="title">Tres Marcos</p>
+            <p>It is a famous monument in the city that points directions and it is a nice place to take pictures</p>
+            </div>
             <picture><img src="images/Screenshot(196).png" alt="" data-src="img_go/tres.jpg" loading="lazy" class="images"></picture>
         </section>
     </div>
@@ -80,6 +97,8 @@
         <script src="js/id.js">
         </script>
         <script src="js/dc.js">
+        </script>
+        <script src="js/json.js">
         </script>
     </footer>
 
