--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <source media="(min-width: 500px)" srcset="500pxh-min.jpg">
             <img src="200pxh-min.jpg" alt="" class="im">
         </picture>
-        <h1>Home-page</h1>
+        <h1 class="pt">Home-page</h1>
         <div id="message">attention!!!(Only today) new offers with 10% of discount</div>
         <div class="grid-container">
             <div class="item1"><section><h1>Events</h1>
