--- a/directory.html
+++ b/directory.html
@@ -7,15 +7,14 @@
 <title>Goiania chamber of commerce</title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-<link href="css/normalize.css" rel="stylesheet">
-<link href="css/small.css" rel="stylesheet">
-<link href="css/medium.css" rel="stylesheet">
-<link href="css/large.css" rel="stylesheet">
+<link rel="stylesheet" href="css/small.css">
+<link rel="stylesheet" href="css/medium.css">
+<link rel="stylesheet" href="css/large.css">
 
 
      
 </head>
-<body>
+<body> 
 	<header>
 	<img src="images/logo.png" alt="logo" class="logo">
     <div><h1>Goiania chamber of commerce</h1>
