--- a/index.html
+++ b/index.html
@@ -25,21 +25,23 @@
     <nav>
         <button id="ham">&#9776;</button>
         <ul id="pn">
+            <li><a href="index.html">Home-page</a></li>
             <li class="active"><a href="index.html">Home-page</a></li>
             <li><a href="dicoverychannel.html">Discover</a></li>
             <li ><a href="directory.html">Directory</a></li>
             <li><a href="join.html">Join</a></li>
             <li><a href="collection.html">Contact</a></li>    
+            
         </ul>
     </nav>
 
     <main>
-        <picture class="myphoto">
-            <source media="(min-width: 900px)" srcset="900pxh-min.jpg">
-            <source media="(min-width: 800px)" srcset="800pxh-min.jpg">
-            <source media="(min-width: 500px)" srcset="500pxh-min.jpg">
-            <img src="200pxh-min.jpg" alt="" class="im">
-        </picture>
+        <!--<picture class="myphoto">-->
+            <!--<source media="(min-width: 900px)" srcset="900pxh-min.jpg">-->
+            <!--<source media="(min-width: 800px)" srcset="800pxh-min.jpg">-->
+            <!--<source media="(min-width: 500px)" srcset="500pxh-min.jpg">-->
+            <!--<img src="200pxh-min.jpg" alt="" class="im">-->
+        <!--</picture>-->
         <h1 class="pt">Home-page</h1>
         <div id="message">attention!!!(Only today) new offers with 10% of discount</div>
         <div class="grid-container">
@@ -50,10 +52,8 @@
                 <section class="box"><p>Welcome to Goiania</p>
                     <button>join the Chamber</button></section>
             </div>
-            <div class="item3"><section><h1>transportation</h1>
-                <img src="box-truck.png" alt="truck-icon" class="icons">
-            <p>email@quicktrasnportation.com</p>
-        <p>999-9999</p></section></div>  
+            <div class="item3">
+               </div>  
         <!---weather thing-->
             <div class="item4"><section><h1 class="h">weather</h1>
                 <div class="thing">
@@ -91,6 +91,8 @@
             <p><a href="https://www.google.com/maps/place/Goi%C3%A2nia,+GO,+Brasil/@-16.6954999,-49.4443564,11z/data=!3m1!4b1!4m5!3m4!1s0x935ef6bd58d80867:0xef692bad20d2678e!8m2!3d-16.6868912!4d-49.2647943">link to map</a></p>
         </div>
         <script src="js/id.js">
+        </script>
+        <script src="js/jsh.js">
         </script>
         <!---<script src="js/ws.js"></script>--->
         <script src="js/weather.js"></script>
