--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         </div>
         </div>
         <div class="flex-container2">
-            <p class="a">&copy;<span id="demo2"></span> .:|:.Dayan F. Frazao .:|:. Utah</p>
+            <p class="a">&copy;<span id="demo2"></span> .:|:.Dayan F. Frazao .:|:. WDD 230 project</p>
             <p class="f">last update: <span id="d2"></span></p>
     
         <script src="scripts/index.js">
